test/fail/Imports/NonTerminating.agda
module Imports.NonTerminating where

Foo : Set
Foo = Foo
